--- a/Week1/numpy.ipynb
+++ b/Week1/numpy.ipynb
@@ -5,25 +5,14 @@
    "execution_count": 1,
    "id": "de7aa87a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "2"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "1+1"
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "5d9165e7",
    "metadata": {},
    "outputs": [
@@ -31,18 +20,194 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello\n"
+      "<class 'numpy.ndarray'>\n",
+      "[1 2 3 4 5]\n",
+      "(5,)\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello\")"
+    "arr1=np.array([1,2,3,4,5])\n",
+    "print(type(arr1))\n",
+    "print(arr1)\n",
+    "print(arr1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "200e65cd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1=arr1.reshape(1,5)\n",
+    "print(arr1.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "15e49804",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 2,  4,  6,  8, 10]])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr2=np.arange(2,11,2).reshape(1,5)\n",
+    "arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "9bf9241d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[17, 12, 20, 17, 14]])"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr3=np.random.randint(low=11,high=22,size=(1,5))\n",
+    "arr3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "9a7f11bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 1. 1. 1. 1.]]\n",
+      "[[0. 0. 0. 0. 0.]]\n",
+      "[[1. 0. 0.]\n",
+      " [0. 1. 0.]\n",
+      " [0. 0. 1.]]\n",
+      "[[2 2 2 2 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr4=np.ones((1,5))\n",
+    "print(arr4)\n",
+    "arr5=np.zeros((1,5))\n",
+    "print(arr5)\n",
+    "arr6=np.eye(3)\n",
+    "print(arr6)\n",
+    "arr7=np.full((1,5),2)\n",
+    "print(arr7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "f0eb68ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n",
+      "16.0\n",
+      "2.756809750418044\n",
+      "17.0\n",
+      "7.6\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sum(arr3))\n",
+    "print(np.mean(arr3))\n",
+    "print(np.std(arr3))\n",
+    "print(np.median(arr3))\n",
+    "print(np.var(arr3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "298eaa26",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 3,  6,  9, 12, 15]])"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "arr1+arr2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "9451a828",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[17 12 20 17 14]]\n",
+      "[[1 2 3 4 5]]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([14])"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(arr3)\n",
+    "print(arr1)\n",
+    "arr3[(arr1)>4]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "200e65cd",
+   "id": "a1945897",
    "metadata": {},
    "outputs": [],
    "source": []
